# shorten

./: .dockerignore  .env.example  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  config.shorten.toml  docker-compose.yml  requirements.txt
.github/workflows/: cargo_compile.yml  cmake_compile.yml  makeDescription.yml  mypy.yml
include/: json.hpp  utils.hpp  videoFormatting.hpp  videoProcessing.hpp  videoUploading.hpp
python/: authGoogleAccount.py  saveToDatabase.py  summarizeVideo.py  transcodeVideo.py
python/workflow/: list_files_without_description.py
scripts/: crontab
src/: json_deserialize.rs  livepeer.rs  main.cpp  main.rs  uploadVideo.cpp  upload_video.rs  utils.cpp  videoFormatting.cpp  videoProcessing.cpp  video_processing.rs
src/Livepeer/: Livepeer.cpp  Livepeer.hpp
src/python/: authGoogleAccount.py  saveToDatabase.py  summarizeVideo.py  transcodeVideo.py  upload-video.py
src/structs/: livepeer_url_struct.rs  mod.rs  retrieve_asset_struct.rs
tests/: LivepeerTests.cpp  videoFormattingTests.cpp  videoFormatting_tests.cpp  videoProcessingTests.cpp
