[package]
name = "shorten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime_guess = "2.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"